# EmscriptenAndCmake

./: README.md  bundle.py  make.py
ExportToJavaScript/: CadEngine.idl
Script/: cmake_emscripten.bat  cmake_generic.bat
Source/: CMakeLists.txt
Source/CMake/: DoxygenTarget.cmake  HelperMethods.cmake  Properties.cmake
Source/CMake/Modules/: FindCpr.cmake  FindCurl.cmake  FindOpenssl.cmake  FindOss.cmake
Source/CMake/Toolchains/: Emscripten.cmake
Source/Exc/: CExport.cpp  CExport.h  CMakeLists.txt  CMakeSources.cmake  ClassTest.cpp  ClassTest.h  EmscriptenTest.cpp
